Fix classloader strategy for Spark integration tests